# cpp-project-template

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  vcpkg-configuration.json  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
benches/: CMakeLists.txt  calculator.benchmark.cpp
benchmarks/: CMakeLists.txt  calculator.benchmark.cpp  calculator_benchmark.cpp
cmake/: CompilerWarnings.cmake  compiler_warnings.cmake
cmake/presets/: CMakeDarwinPresets.json  CMakeGenericPresets.json  CMakeLinuxPresets.json  CMakeWindowsPresets.json
docs/: code_guidelines.md  naming_conventions.md
include/: calculator.h
src/: CMakeLists.txt  calculator.cpp  main.cpp
tests/: CMakeLists.txt  calculator.test.cpp
